# CommSyncRL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SyncComms.sln  SyncComms.vcxproj  export.sh
cmake/ogg/: config_types.h
data/: synccomms.cfg  synccomms.set
include/SyncComms/: AudioCaptureManager.h  AudioCompressor.h  AudioPlaybackManager.h  AudioResampler.h  AudioSessionEnumerator.h  Config.h  GuiBase.h  RingBuffer.h  SidecarManager.h  SyncCommsPlugin.h  SyncState.h  UIOverlay.h  WasapiCapture.h  WavWriter.h
src/: AudioCaptureManager.cpp  AudioCompressor.cpp  AudioPlaybackManager.cpp  AudioResampler.cpp  AudioSessionEnumerator.cpp  Config.cpp  GuiBase.cpp  SidecarManager.cpp  SyncCommsPlugin.cpp  SyncState.cpp  UIOverlay.cpp  WasapiCapture.cpp  WavWriter.cpp  miniaudio_impl.cpp
test/: CMakeLists.txt  test_sync_algorithm.cpp
